fix layout main content spacing

--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -9,6 +9,11 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: flex-start;
+}
+
+.mainContainer > * {
+  width: 100%;
 }
 
 .mainContainer main {
